browser/themes/shared/browser-shared.css
/* ... */
:root {
  --window-min-width: 500px;
  /* Vertical tabs need extra room in the nav bar for window controls,
     drag space, and the sidebar button. */
  --window-min-width-increase-for-vertical-tabs: calc(var(--window-controls-size) + 23px);
  --window-controls-size: 138px;
  @media (-moz-platform: macos) {
    --window-controls-size: 76px;
  }
  @media (-moz-platform: linux) {
    /* FIXME: Use --titlebar-button-* variables to calculate the window
              controls' size. */
    --window-controls-size: 115px;
  }

  user-select: none;
  color-scheme: light dark;
  text-rendering: optimizeLegibility;
  /* Minimum sizing comes from specific size requirements and adds on other
   * values for different scenarios that don't lend themselves to design tokens. */
  /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
  min-height: 95px;
  /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
  min-width: 95px;

  @media not (forced-colors) {
    accent-color: var(--color-accent-primary);
  }

  &:-moz-locale-dir(rtl) {
    direction: rtl;
  }

  &:not([chromehidden~="toolbar"]) {
    /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
    min-width: var(--window-min-width);
    /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
    min-height: 120px;

    @media -moz-pref("sidebar.verticalTabs") {
      /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
      min-width: calc(var(--window-min-width) + var(--window-min-width-increase-for-vertical-tabs));

      /* If the Content Analysis icon is showing, we don't
         want to collapse it, so make a little more room. */
      &[contentanalysisactive] {
        /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
        min-width: calc(var(--window-min-width) + var(--window-min-width-increase-for-vertical-tabs) + 36px);
      }
    }
  }

  &[taskbartab]:not([chromehidden~="toolbar"]) {
    /* This size prevents toolbar contents from overlapping or overflowing. */
    /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
    min-width: 804px;
  }

  /* z-indices that fight on the browser stack */
  --browser-stack-z-index-devtools-splitter: 1;
  --browser-stack-z-index-dialog-stack: 2;
  --browser-stack-z-index-rdm-toolbar: 3;
  --browser-stack-z-index-screenshots-panel: 4;

  /* z-indices that fight in the general browser / toolbox area */
  --browser-area-z-index-toolbox: 0;
  --browser-area-z-index-sidebar: 1;
  --browser-area-z-index-tabbox: 2;
  --browser-area-z-index-sidebar-expand-on-hover: 4;
  --browser-area-z-index-sidebar-splitter: 3;

  /* on macOS the animation of the toolbox in fullscreen needs the toolbox to be higher */
  --browser-area-z-index-toolbox-while-animating: 4;

  --lwt-additional-images: none;
  --lwt-background-tiling: no-repeat;
  --lwt-background-alignment: right top;
  --lwt-background-size: auto;

  --toolbox-background-image: none;
  --toolbox-background-repeat: no-repeat;
  --toolbox-background-position: right top;
  --toolbox-background-size: auto;

  @media -moz-pref("browser.nova.enabled") {
    --toolbox-background-image: var(--toolbox-background-gradient);
  }

  &[lwtheme] {
    --toolbox-background-image: var(--lwt-additional-images);
    --toolbox-background-repeat: var(--lwt-background-tiling);
    --toolbox-background-position: var(--lwt-background-alignment);
    --toolbox-background-size: var(--lwt-background-size);
  }

  &[lwtheme-image] {
    /* When a theme defines both theme_frame and additional_backgrounds, show
       the latter atop the former. */
    --toolbox-background-image: var(--lwt-header-image), var(--lwt-additional-images);
    --toolbox-background-repeat: no-repeat, var(--lwt-background-tiling);
    --toolbox-background-position: right top, var(--lwt-background-alignment);
    --toolbox-background-size: auto, var(--lwt-background-size);
  }

  --ext-theme-background-transition: background-color 0.1s cubic-bezier(0.17, 0.67, 0.83, 0.67);

  --inactive-window-transition: 0.2s ease;
  --inactive-titlebar-opacity: var(--opacity-deemphasized-strong);
  /**
   * On macOS and Linux, fading the whole titlebar is the native behavior.
   *
   * On Windows there's no particular standard, but the default .6 opacity
   * feels like too much, specially because Windows "fades" the titlebar of
   * unresponsive applications. Fade substantially less the titlebar on windows
   * to account for this platform difference.
   */
  @media (-moz-platform: windows) {
    --inactive-titlebar-opacity: 0.75;
  }
  @media (prefers-reduced-motion) {
    --inactive-window-transition: 0s;
  }

  &[lwtheme] {
    /* Theme colors don't need to use design tokens. */
    /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
    color: var(--lwt-text-color);
  }

  @media -moz-pref("browser.nova.enabled") {
    --chrome-window-gap: 4px;
    --chrome-block-radius: 10px;

    @media (-moz-platform: linux) {
      --chrome-block-radius: env(-moz-gtk-csd-titlebar-radius);
    }

    @media (-moz-platform: windows) {
      --chrome-block-radius: 4px;
    }

    @media (-moz-windows-mica) {
      --chrome-block-radius: 8px;
    }

    @media (-moz-mac-tahoe-theme) {
      --chrome-block-radius: 16px;
    }
  }
}

body {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin: 0;
}
/* ... */

